# wordle-wars

./: .gitignore  Anchor.toml  CLEANUP_AUDIT.md  DEPLOYMENT.md  PASTE_THIS_INTO_PLAYGROUND.rs  PROFESSIONAL_SETUP.md  QUICK_DEPLOY.md  README.md  REAL_DEPLOYMENT.md  REDEPLOY-WITH-FEES.md  about.html  build-solana-bundle.js  cleanup-stuck-games.js  create-browser-bundle.js  deploy-to-playground.md  env.example  install-build-tools.bat  install-tools-fixed.ps1  install-tools.bat  install-tools.ps1  netlify.toml  package-lock.json  package.json  pump-style.html  real-blockchain-integration.js  real-dev-deploy.bat  real-solana-client.js  recover-stuck-sol.js  recover-via-cancel.html  serve.py  server.js  setup.bat  solana-bundle.js  solana-client.js  start-network.bat  test-setup.bat  wordle-escrow-idl.json  wsl-setup.sh
.github/workflows/: deploy.yml
programs/wordle-escrow/: Cargo.toml
programs/wordle-escrow/src/: lib.rs
public/: solana-bundle.js
src/: program.ts
tests/: wordle-escrow.test.ts
