[package]
name = "wordle-escrow"
version = "0.1.0"
description = "Wordle Wars Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wordle_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

